[Audit Lighthouse] ✅ Document does not have a meta description

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="description" content="Download videos / audios from YouTube easily with this Youtube Downloader">
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
