Closes #8: ⚡ Add favicon to front end

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -13,7 +13,10 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <meta name="description" content="Download videos / audios from YouTube easily with this Youtube Downloader">
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon/favicon-16x16.png">
+  <link rel="manifest" href="assets/icon/favicon/site.webmanifest">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
