--- a/front/src/index.html
+++ b/front/src/index.html
@@ -21,6 +21,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script src="https://apis.google.com/js/api.js"></script>
 </head>
 
 <body>
