--- a/front/src/index.html
+++ b/front/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Youtube Video Downloader</title>
 
   <base href="/" />
 
